[package]
name = "pallet-bonding-curve"
version = "0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.frame-support]
default-features = false
version = '2.0.0'

[dependencies.frame-system]
default-features = false
version = '2.0.0'

[dependencies.orml-tokens]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
version = '0.3.0'
rev = 'e5f3be0372e7f2f2e2c9a0079633e92115c8feb4'

[dependencies.orml-traits]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
version = '0.3.0'
rev = 'e5f3be0372e7f2f2e2c9a0079633e92115c8feb4'

[dependencies.pallet-balances]
default-features = false
version = '2.0.0'

[dependencies.sp-arithmetic]
default-features = false
version = '2.0.0'

[dependencies.sp-core]
default-features = false
version = '2.0.0'

[dependencies.sp-io]
default-features = false
version = '2.0.0'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[dependencies.orml-currencies]
default-features = false
git = 'https://github.com/open-web3-stack/open-runtime-module-library'
version = '0.3.0'
rev = 'e5f3be0372e7f2f2e2c9a0079633e92115c8feb4'


[dev-dependencies]

[dev-dependencies.sp-core]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-io]
default-features = false
version = '2.0.0'

[dev-dependencies.sp-runtime]
default-features = false
version = '2.0.0'

[features]
default = ["std"]
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    'pallet-balances/std',
    'sp-arithmetic/std',
    'sp-io/std',
    'sp-runtime/std',
]
